src/core/config/transformer/snapshots/tailcall__core__config__transformer__use_suggested_names__test__with_suggested_names.snap
---
source: src/core/config/transformer/use_suggested_names.rs
expression: transformed_config.to_sdl()
---
schema @server(port: 8000) @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 100, headers: []}, httpCache: 42) {
  query: Query
}

type Post {
  body: String
  id: ID
  title: String
}

type Query {
  post(id: ID!): Post @http(path: "/posts")
  todos: [Todo] @http(path: "/todos")
  users: [User] @http(path: "/users")
}

type Todo {
  id: ID
  todoPost: Post
}

type User {
  id: ID
  name: String
  relatedPosts: [Post] @http(path: "/posts", query: [{key: "id", value: "{{.value.id}}"}])
}
